archived_docs/versions/v2.8/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/manage-cluster-drivers.adoc
= Cluster Drivers
:page-languages: [en, zh]
:revdate: 2024-09-26
:page-revdate: {revdate}

Cluster drivers are used to create clusters in a xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes provider], such as Google GKE. The availability of which cluster driver to display when creating clusters is defined by the cluster driver's status. Only `active` cluster drivers will be displayed as an option for creating clusters. By default, Rancher is packaged with several existing cloud provider cluster drivers, but you can also add custom cluster drivers to Rancher.

If there are specific cluster drivers that you do not want to show your users, you may deactivate those cluster drivers within Rancher and they will not appear as an option for cluster creation.

== Managing Cluster Drivers

[NOTE]
.Prerequisites:
====
To create, edit, or delete cluster drivers, you need _one_ of the following permissions:

* xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[Administrator Global Permissions]
* xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc#_custom_global_permissions[Custom Global Permissions] with the xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[Manage Cluster Drivers] role assigned.
====


== Activating/Deactivating Cluster Drivers

By default, Rancher only activates drivers for the most popular cloud providers, Google GKE, Amazon EKS and Azure AKS. If you want to show or hide any node driver, you can change its status.

. In the upper left corner, click *☰ > Cluster Management*.
. In the left navigation menu, click *Drivers*.
. On the *Cluster Drivers* tab, select the driver that you wish to activate or deactivate and click *⋮ > Activate* or *⋮ > Deactivate*.

== Adding Custom Cluster Drivers

If you want to use a cluster driver that Rancher doesn't support out-of-the-box, you can add the provider's driver in order to start using them to create _hosted_ kubernetes clusters.

. In the upper left corner, click *☰ > Cluster Management*.
. In the left navigation menu, click *Drivers*.
. On the *Cluster Drivers* tab, click *Add Cluster Driver*.
. Complete the *Add Cluster Driver* form. Then click *Create*.

== Developing your own Cluster Driver

In order to develop cluster driver to add to Rancher, please refer to our https://github.com/rancher-plugins/kontainer-engine-driver-example[example].
